<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a660252397.downpaymentsaver.secondActivity">

    <TextView
        android:id="@+id/savingsTextViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="28dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/savingsTextViewLabel"
        android:layout_marginStart="45dp"
        android:layout_toEndOf="@+id/savingsTextViewLabel"
        android:text="@string/available_to_save" />

    <EditText
        android:id="@+id/itemValueEditTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/savingsTextViewLabel"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/downpayperEditTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/itemValueEditTextView"
        android:layout_alignEnd="@+id/itemValueEditTextView" />

    <EditText
        android:id="@+id/interestRateEditTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/downpayperEditTextView"
        android:layout_toStartOf="@+id/clearButton" />

    <EditText
        android:id="@+id/savingsEditTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/savingsTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/itemValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_cost_of_item"
        android:layout_alignBaseline="@+id/itemValueEditTextView"
        android:layout_alignBottom="@+id/itemValueEditTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="54dp" />

    <TextView
        android:id="@+id/downpayperTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down_payment"
        android:layout_alignBaseline="@+id/downpayperEditTextView"
        android:layout_alignBottom="@+id/downpayperEditTextView"
        android:layout_alignEnd="@+id/itemValueTextView" />

    <TextView
        android:id="@+id/interestRateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interest_rate"
        android:layout_alignBottom="@+id/interestRateEditTextView"
        android:layout_alignEnd="@+id/downpayperTextView" />

    <TextView
        android:id="@+id/savingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_much_will_you_put_away_each_month"
        android:layout_marginTop="83dp"
        android:layout_below="@+id/interestRateEditTextView"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="29dp"
        android:layout_marginEnd="21dp"
        android:onClick="onClickNext"
        android:text="NEXT" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickClear"
        android:text="CLEAR"
        android:layout_alignBaseline="@+id/nextButton"
        android:layout_alignBottom="@+id/nextButton"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/clearButton"
        android:layout_alignStart="@+id/savingsTextViewLabel"
        android:onClick="onClickBack"
        android:text="BACK" />

    <TextView
        android:id="@+id/downPayPreviewTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$0.00"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/nextButton" />

    <TextView
        android:id="@+id/downPayLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Estimated Down Payment"
        android:layout_alignBaseline="@+id/downPayPreviewTextView"
        android:layout_alignBottom="@+id/downPayPreviewTextView"
        android:layout_alignEnd="@+id/clearButton" />

</RelativeLayout>
